fixed websockets not working on mobile

--- a/public_html/css/chat.css
+++ b/public_html/css/chat.css
@@ -44,7 +44,7 @@ footer {
     flex-direction: row;
     min-height: 10%;
     max-width: 60%;
-    font-size: xxx-large;
+    font-size: 300%;
     color: white;
     padding: 20px;
 }
